[gd_scene load_steps=6 format=2]

[ext_resource path="res://Backgrounds/Background0.tscn" type="PackedScene" id=1]
[ext_resource path="res://Backgrounds/Foreground1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Backgrounds/Foreground0.tscn" type="PackedScene" id=3]
[ext_resource path="res://Backgrounds/Foreground2.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/BackgroundParalax.gd" type="Script" id=5]

[node name="Background" type="Node2D"]
scale = Vector2( 3.75, 3.75 )
script = ExtResource( 5 )

[node name="BG0" type="Node2D" parent="."]

[node name="Background0" parent="BG0" instance=ExtResource( 1 )]

[node name="FG2" type="Node2D" parent="."]

[node name="Foreground2" parent="FG2" instance=ExtResource( 4 )]

[node name="FG1" type="Node2D" parent="."]

[node name="Foreground1" parent="FG1" instance=ExtResource( 2 )]

[node name="FG0" type="Node2D" parent="."]

[node name="Foreground0" parent="FG0" instance=ExtResource( 3 )]
