extends Node2D

export (PackedScene) var Background
export (PackedScene) var Foreground0
export (PackedScene) var Foreground1
export (PackedScene) var Foreground2

# Called when the node enters the scene tree for the first time.
func _ready():
	#Build two new instances of 
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
